--- a/src/main/resources/static/same/header.html
+++ b/src/main/resources/static/same/header.html
@@ -21,7 +21,7 @@
         <div class="right-menu list-inline no-margin-bottom">
             <!-- Log out -->
             <div class="list-inline-item logout">
-                <a id="logout" href="../../templates/html/index.html" class="nav-link"><span class="d-none d-sm-inline">Logout </span></a>
+                <a id="logout" href="Logout" class="nav-link"><span class="d-none d-sm-inline">Logout </span></a>
             </div>
         </div>
     </div>
